fix overflow issue on projects

--- a/src/components/main/parts/projects.module.scss
+++ b/src/components/main/parts/projects.module.scss
@@ -1,6 +1,7 @@
 #projectsFlex {
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 
     .logo {
         &.mauz {
